Applied code formatting to all tutorials

--- a/documentation/source/general/tutorial/H2.ipynb
+++ b/documentation/source/general/tutorial/H2.ipynb
@@ -111,7 +111,8 @@
    ],
    "source": [
     "from qrisp.operators import c, a\n",
-    "O = a(0)*c(1) + a(1)*a(2)\n",
+    "\n",
+    "O = a(0) * c(1) + a(1) * a(2)\n",
     "print(O)"
    ]
   },
@@ -170,7 +171,7 @@
     }
    ],
    "source": [
-    "O = a(0)*a(0) + a(1)*a(2) - a(2) * a(1)\n",
+    "O = a(0) * a(0) + a(1) * a(2) - a(2) * a(1)\n",
     "print(O.reduce())"
    ]
   },
@@ -213,7 +214,7 @@
    ],
    "source": [
     "O_fermionic = a(4)\n",
-    "O_qubit = O_fermionic.to_qubit_operator(mapping_type = \"jordan_wigner\")\n",
+    "O_qubit = O_fermionic.to_qubit_operator(mapping_type=\"jordan_wigner\")\n",
     "print(O_qubit)"
    ]
   },
@@ -284,7 +285,8 @@
    "source": [
     "from pyscf import gto\n",
     "from qrisp.operators import FermionicOperator\n",
-    "mol = gto.M(atom = '''H 0 0 0; H 0 0 0.74''', basis = 'sto-3g')\n",
+    "\n",
+    "mol = gto.M(atom=\"\"\"H 0 0 0; H 0 0 0.74\"\"\", basis=\"sto-3g\")\n",
     "H_ferm = FermionicOperator.from_pyscf(mol)\n",
     "print(H_ferm)"
    ]
@@ -352,11 +354,12 @@
     "\n",
     "U = H_ferm.trotterization()\n",
     "\n",
+    "\n",
     "def state_prep():\n",
     "    electron_state = QuantumVariable(4)\n",
     "    electron_state[:] = {\"1100\": 2**-0.5, \"0001\": 2**-0.5}\n",
     "\n",
-    "    U(electron_state, t = 100, steps = 20)\n",
+    "    U(electron_state, t=100, steps=20)\n",
     "\n",
     "    return electron_state"
    ]
@@ -420,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = sum(c(i)*a(i) for i in range(4))"
+    "N = sum(c(i) * a(i) for i in range(4))"
    ]
   },
   {
@@ -451,7 +454,7 @@
     }
    ],
    "source": [
-    "expectation_value = N.expectation_value(state_prep, precision = 0.01)()\n",
+    "expectation_value = N.expectation_value(state_prep, precision=0.01)()\n",
     "print(expectation_value)"
    ]
   },
@@ -483,7 +486,7 @@
     }
    ],
    "source": [
-    "print(N.expectation_value(state_prep, precision = 0.0001)())"
+    "print(N.expectation_value(state_prep, precision=0.0001)())"
    ]
   },
   {
@@ -517,9 +520,10 @@
    ],
    "source": [
     "# Loading molecular data\n",
-    "from qrisp.operators import a,c, FermionicOperator\n",
+    "from qrisp.operators import a, c, FermionicOperator\n",
     "from pyscf import gto\n",
-    "mol = gto.M(atom = '''H 0 0 0; H 0 0 0.74''', basis = 'sto-3g')\n",
+    "\n",
+    "mol = gto.M(atom=\"\"\"H 0 0 0; H 0 0 0.74\"\"\", basis=\"sto-3g\")\n",
     "H_ferm = FermionicOperator.from_pyscf(mol)\n",
     "\n",
     "# Initializing the quantum state and performing Hamiltonian simulation\n",
@@ -527,17 +531,19 @@
     "\n",
     "U = H_ferm.trotterization()\n",
     "\n",
+    "\n",
     "def state_prep():\n",
     "    electron_state = QuantumVariable(4)\n",
     "    electron_state[:] = {\"1100\": 2**-0.5, \"0001\": 2**-0.5}\n",
     "\n",
-    "    U(electron_state, t = 100, steps = 20)\n",
+    "    U(electron_state, t=100, steps=20)\n",
     "\n",
     "    return electron_state\n",
     "\n",
+    "\n",
     "# Evaluating the number operator\n",
-    "N = sum(c(i)*a(i) for i in range(4))\n",
-    "expectation_value = N.expectation_value(state_prep, precision = 0.01)()\n",
+    "N = sum(c(i) * a(i) for i in range(4))\n",
+    "expectation_value = N.expectation_value(state_prep, precision=0.01)()\n",
     "print(expectation_value)"
    ]
   }
