--- a/documentation/source/general/tutorial/JaspQAOAtutorial.ipynb
+++ b/documentation/source/general/tutorial/JaspQAOAtutorial.ipynb
@@ -100,7 +100,9 @@
     "    @jit\n",
     "    def cut_computer(x):\n",
     "        x_uint = jnp.uint32(x)\n",
-    "        bools = extract_boolean_digit(x_uint, edge_list[:, 0]) != extract_boolean_digit(x_uint, edge_list[:, 1])\n",
+    "        bools = extract_boolean_digit(x_uint, edge_list[:, 0]) != extract_boolean_digit(\n",
+    "            x_uint, edge_list[:, 1]\n",
+    "        )\n",
     "        cut = jnp.sum(bools)  # Count the number of edges crossing the cut\n",
     "        return -cut\n",
     "\n",
@@ -129,7 +131,7 @@
     "\n",
     "    def post_processor(sample_array):\n",
     "        # Use vmap for automatic vectorization\n",
-    "        cut_values = vmap(cut_computer)(sample_array)  \n",
+    "        cut_values = vmap(cut_computer)(sample_array)\n",
     "        average_cut = jnp.mean(cut_values)  # Directly compute average\n",
     "        return average_cut\n",
     "\n",
@@ -169,7 +171,9 @@
     "post_processor = create_sample_array_post_processor(G)\n",
     "\n",
     "# Sample input array representing different cuts\n",
-    "sample_array = jnp.array([0b0001, 0b0010, 0b0100, 0b1000])  # Example binary representations\n",
+    "sample_array = jnp.array(\n",
+    "    [0b0001, 0b0010, 0b0100, 0b1000]\n",
+    ")  # Example binary representations\n",
     "\n",
     "# Compute the average cut\n",
     "average_cut = post_processor(sample_array)\n",
@@ -246,7 +250,7 @@
     "\n",
     "        for i in jrange(p):\n",
     "            apply_cost_operator(qv, theta[i])\n",
-    "            apply_mixer(qv, theta[p+i])\n",
+    "            apply_mixer(qv, theta[p + i])\n",
     "\n",
     "        return qv\n",
     "\n",
@@ -277,7 +281,7 @@
     "\n",
     "    def objective(theta, p):\n",
     "\n",
-    "        res_sample = sample(ansatz, shots=1000)(theta ,p)\n",
+    "        res_sample = sample(ansatz, shots=1000)(theta, p)\n",
     "\n",
     "        value = post_processor(res_sample)\n",
     "\n",
@@ -317,12 +321,12 @@
     "    p = 3\n",
     "\n",
     "    # Initial point for theta\n",
-    "    x0 = jnp.array([0.5]*2*p)\n",
+    "    x0 = jnp.array([0.5] * 2 * p)\n",
     "\n",
-    "    result = minimize(objective,x0,(p,))\n",
+    "    result = minimize(objective, x0, (p,))\n",
     "\n",
     "    # Sample from ansatz state for optimal parameters\n",
-    "    samples = sample(ansatz, shots = 10)(result.x,p)\n",
+    "    samples = sample(ansatz, shots=10)(result.x, p)\n",
     "\n",
     "    return samples"
    ]
