--- a/documentation/source/general/tutorial/QAOAtutorial/ConstrainedMixers.ipynb
+++ b/documentation/source/general/tutorial/QAOAtutorial/ConstrainedMixers.ipynb
@@ -132,11 +132,12 @@
    "source": [
     "from qrisp import *\n",
     "\n",
+    "\n",
     "@auto_uncompute\n",
     "def constraint_oracle(qarg, phase):\n",
     "\n",
-    "    predicate = QuantumBool()        \n",
-    "    \n",
+    "    predicate = QuantumBool()\n",
+    "\n",
     "    cx(qarg[0], predicate)\n",
     "    cx(qarg[-1], predicate)\n",
     "    p(phase, predicate)"
@@ -164,11 +165,11 @@
    "source": [
     "from qrisp.grover import grovers_alg\n",
     "\n",
+    "\n",
     "def prep_psi(qarg):\n",
-    "    grovers_alg(qarg, \n",
-    "                constraint_oracle, \n",
-    "                exact = True, \n",
-    "                winner_state_amount = 2**(len(qarg)-1))"
+    "    grovers_alg(\n",
+    "        qarg, constraint_oracle, exact=True, winner_state_amount=2 ** (len(qarg) - 1)\n",
+    "    )"
    ]
   },
   {
@@ -238,7 +239,7 @@
    "source": [
     "def constrained_mixer(qarg, beta):\n",
     "    with conjugate(inv_prep_psi)(qarg):\n",
-    "        mcp(beta, qarg, ctrl_state = 0)"
+    "        mcp(beta, qarg, ctrl_state=0)"
    ]
   },
   {
@@ -292,7 +293,7 @@
     "qv = QuantumVariable(3)\n",
     "qv[:] = \"110\"\n",
     "constrained_mixer(qv, 0)\n",
-    "print(qv)\n"
+    "print(qv)"
    ]
   },
   {
@@ -310,7 +311,7 @@
     }
    ],
    "source": [
-    "# Checks the action of the mixer on an allowed state \n",
+    "# Checks the action of the mixer on an allowed state\n",
     "# (expected to mix only among the states where first and last qubit disagree)\n",
     "qv = QuantumVariable(3)\n",
     "qv[:] = \"011\"\n",
@@ -337,15 +338,19 @@
     "\n",
     "G = Graph()\n",
     "\n",
-    "G.add_edges_from([[0,3],[0,4],[1,3],[1,4],[2,3],[2,4]])\n",
+    "G.add_edges_from([[0, 3], [0, 4], [1, 3], [1, 4], [2, 3], [2, 4]])\n",
     "\n",
-    "from qrisp.qaoa import (QAOAProblem, \n",
-    "                        create_maxcut_cost_operator, \n",
-    "                        create_maxcut_cl_cost_function)\n",
+    "from qrisp.qaoa import (\n",
+    "    QAOAProblem,\n",
+    "    create_maxcut_cost_operator,\n",
+    "    create_maxcut_cl_cost_function,\n",
+    ")\n",
     "\n",
-    "max_cut_instance = QAOAProblem(cost_operator = create_maxcut_cost_operator(G),\n",
-    "                               mixer = constrained_mixer,\n",
-    "                               cl_cost_function = create_maxcut_cl_cost_function(G))"
+    "max_cut_instance = QAOAProblem(\n",
+    "    cost_operator=create_maxcut_cost_operator(G),\n",
+    "    mixer=constrained_mixer,\n",
+    "    cl_cost_function=create_maxcut_cl_cost_function(G),\n",
+    ")"
    ]
   },
   {
@@ -375,11 +380,10 @@
     "    h(qarg[1:-1])\n",
     "    x(qarg[-1])\n",
     "\n",
+    "\n",
     "max_cut_instance.set_init_function(prep_allowed_state)\n",
     "\n",
-    "res = max_cut_instance.run(qarg = QuantumVariable(5), \n",
-    "                          depth = 4, \n",
-    "                          max_iter = 25)\n",
+    "res = max_cut_instance.run(qarg=QuantumVariable(5), depth=4, max_iter=25)\n",
     "\n",
     "print(res)"
    ]
@@ -469,11 +473,11 @@
    "outputs": [],
    "source": [
     "@as_hamiltonian\n",
-    "def hamiltonian_evolution(channel_number, beta = 0):\n",
-    "    if channel_number%2:\n",
+    "def hamiltonian_evolution(channel_number, beta=0):\n",
+    "    if channel_number % 2:\n",
     "        return 0\n",
     "    else:\n",
-    "        return beta/4*channel_number"
+    "        return beta / 4 * channel_number"
    ]
   },
   {
@@ -498,8 +502,8 @@
    "outputs": [],
    "source": [
     "def apply_channel_propagation(channel, mixing_var, beta):\n",
-    "    with control(mixing_var, ctrl_state = 0):\n",
-    "        hamiltonian_evolution(channel, beta = beta)"
+    "    with control(mixing_var, ctrl_state=0):\n",
+    "        hamiltonian_evolution(channel, beta=beta)"
    ]
   },
   {
@@ -556,7 +560,7 @@
     "multi_channel_mixer(channel, mixing_var, 0)\n",
     "\n",
     "print(multi_measurement([channel, mixing_var]))\n",
-    "#Yields: {(2, '101'): 1.0}"
+    "# Yields: {(2, '101'): 1.0}"
    ]
   },
   {
