--- a/documentation/source/general/tutorial/QAOAtutorial/QUBO.ipynb
+++ b/documentation/source/general/tutorial/QAOAtutorial/QUBO.ipynb
@@ -27,29 +27,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "51a388fe",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "# Convert upper triangular QUBO matrix to symmetrized version\n",
+    "\n",
+    "\n",
     "def upper_triangular_to_symmetric(Q_up_triang):\n",
+    "    # Convert upper triangular QUBO matrix to symmetrized version\n",
     "    return 0.5 * (Q_up_triang + Q_up_triang.T)\n",
     "\n",
-    "# Convert symmetrized QUBO matrix to upper triangular version\n",
+    "\n",
     "def symmetric_to_upper_triangular(Q_sym):\n",
+    "    # Convert symmetrized QUBO matrix to upper triangular version\n",
     "    return 2 * np.triu(Q_sym) - np.diag(np.diag(Q_sym))\n",
     "\n",
+    "\n",
     "# Example from the notebook\n",
-    "Q_sym = np.array([\n",
-    "    [-17,  10,  10,  10,   0,  20],\n",
-    "    [ 10, -18,  10,  10,  10,  20],\n",
-    "    [ 10,  10, -29,  10,  20,  20],\n",
-    "    [ 10,  10,  10, -19,  10,  10],\n",
-    "    [  0,  10,  20,  10, -17,  10],\n",
-    "    [ 20,  20,  20,  10,  10, -28]\n",
-    "])\n",
+    "Q_sym = np.array(\n",
+    "    [\n",
+    "        [-17, 10, 10, 10, 0, 20],\n",
+    "        [10, -18, 10, 10, 10, 20],\n",
+    "        [10, 10, -29, 10, 20, 20],\n",
+    "        [10, 10, 10, -19, 10, 10],\n",
+    "        [0, 10, 20, 10, -17, 10],\n",
+    "        [20, 20, 20, 10, 10, -28],\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "# Convert symmetric to upper triangular\n",
     "Q_up_triang = symmetric_to_upper_triangular(Q_sym)"
@@ -107,12 +113,12 @@
     "\n",
     "Q = np.array(\n",
     "    [\n",
-    "        [-17,  10,  10,  10,   0,  20],\n",
-    "        [ 10, -18,  10,  10,  10,  20],\n",
-    "        [ 10,  10, -29,  10,  20,  20],\n",
-    "        [ 10,  10,  10, -19,  10,  10],\n",
-    "        [ 0,   10,  20,  10, -17,  10],\n",
-    "        [ 20,  20,  20,  10,  10, -28],\n",
+    "        [-17, 10, 10, 10, 0, 20],\n",
+    "        [10, -18, 10, 10, 10, 20],\n",
+    "        [10, 10, -29, 10, 20, 20],\n",
+    "        [10, 10, 10, -19, 10, 10],\n",
+    "        [0, 10, 20, 10, -17, 10],\n",
+    "        [20, 20, 20, 10, 10, -28],\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -170,14 +176,15 @@
     "    def QUBO_cost_operator(qv, gamma):\n",
     "\n",
     "        # Rescaling for enhancing the performance of the QAOA\n",
-    "        gamma = gamma/np.sqrt(np.linalg.norm(Q))\n",
+    "        gamma = gamma / np.sqrt(np.linalg.norm(Q))\n",
     "\n",
-    "        gphase(-gamma/4*(np.sum(Q)+np.trace(Q)),qv[0])\n",
+    "        gphase(-gamma / 4 * (np.sum(Q) + np.trace(Q)), qv[0])\n",
     "        for i in range(len(Q)):\n",
-    "            rz(-gamma/2*(sum(Q[i])+sum(Q[:,i])), qv[i])\n",
+    "            rz(-gamma / 2 * (sum(Q[i]) + sum(Q[:, i])), qv[i])\n",
     "            for j in range(len(Q)):\n",
     "                if i != j and Q[i][j] != 0:\n",
-    "                    rzz(gamma/2*Q[i][j], qv[i], qv[j])\n",
+    "                    rzz(gamma / 2 * Q[i][j], qv[i], qv[j])\n",
+    "\n",
     "    return QUBO_cost_operator"
    ]
   },
@@ -199,33 +206,38 @@
     "from qrisp import rzz, rz, gphase\n",
     "import numpy as np\n",
     "\n",
+    "\n",
     "def QUBO_obj(bitstring, Q):\n",
     "    x = np.array(list(bitstring), dtype=int)\n",
     "    cost = x.T @ Q @ x\n",
     "    return cost\n",
     "\n",
+    "\n",
     "def create_QUBO_cl_cost_function(Q):\n",
     "\n",
     "    def cl_cost_function(counts):\n",
-    "    \n",
+    "\n",
     "        def QUBO_obj(bitstring, Q):\n",
     "            x = np.array(list(bitstring), dtype=int)\n",
     "            cost = x.T @ Q @ x\n",
     "            return cost\n",
-    "    \n",
+    "\n",
     "        energy = 0\n",
     "        for meas, meas_count in counts.items():\n",
-    "            obj_for_meas = QUBO_obj(meas,Q)\n",
+    "            obj_for_meas = QUBO_obj(meas, Q)\n",
     "            energy += obj_for_meas * meas_count\n",
     "        return energy\n",
     "\n",
     "    return cl_cost_function\n",
     "\n",
+    "\n",
     "def QUBO_problem(Q):\n",
     "\n",
     "    from qrisp.qaoa import QAOAProblem, RX_mixer\n",
     "\n",
-    "    return QAOAProblem(create_QUBO_cost_operator(Q), RX_mixer, create_QUBO_cl_cost_function(Q))"
+    "    return QAOAProblem(\n",
+    "        create_QUBO_cost_operator(Q), RX_mixer, create_QUBO_cl_cost_function(Q)\n",
+    "    )"
    ]
   },
   {
@@ -282,12 +294,12 @@
     "\n",
     "Q = np.array(\n",
     "    [\n",
-    "        [-17,  20,  20,  20,   0,  40],\n",
-    "        [  0, -18,  20,  20,  20,  40],\n",
-    "        [  0,   0, -29,  20,  40,  40],\n",
-    "        [  0,   0,   0, -19,  20,  20],\n",
-    "        [  0,   0,   0,   0, -17,  20],\n",
-    "        [  0,   0,   0,   0,   0, -28],\n",
+    "        [-17, 20, 20, 20, 0, 40],\n",
+    "        [0, -18, 20, 20, 20, 40],\n",
+    "        [0, 0, -29, 20, 40, 40],\n",
+    "        [0, 0, 0, -19, 20, 20],\n",
+    "        [0, 0, 0, 0, -17, 20],\n",
+    "        [0, 0, 0, 0, 0, -28],\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -296,14 +308,16 @@
     "QUBO_instance = QUBO_problem(Q)\n",
     "\n",
     "depth = 1\n",
-    "res = QUBO_instance.run(qarg, depth, mes_kwargs={\"backend\" : def_backend}, max_iter=50)\n",
+    "res = QUBO_instance.run(qarg, depth, mes_kwargs={\"backend\": def_backend}, max_iter=50)\n",
     "\n",
     "costs_and_solutions = [(QUBO_obj(bitstring, Q), bitstring) for bitstring in res.keys()]\n",
     "\n",
     "sorted_costs_and_solutions = sorted(costs_and_solutions, key=itemgetter(0))\n",
     "\n",
     "for i in range(5):\n",
-    "    print(f\"Solution {i+1}: {sorted_costs_and_solutions[i][1]} with cost: {sorted_costs_and_solutions[i][0]} and probability: {res[sorted_costs_and_solutions[i][1]]}\")"
+    "    print(\n",
+    "        f\"Solution {i+1}: {sorted_costs_and_solutions[i][1]} with cost: {sorted_costs_and_solutions[i][0]} and probability: {res[sorted_costs_and_solutions[i][1]]}\"\n",
+    "    )"
    ]
   },
   {
