--- a/documentation/source/general/tutorial/QIROtutorial.ipynb
+++ b/documentation/source/general/tutorial/QIROtutorial.ipynb
@@ -181,9 +181,9 @@
     "\n",
     "    # for single qubit correlations\n",
     "    orig_nodes = list(graph.nodes())\n",
-    "    \n",
+    "\n",
     "    max_item = []\n",
-    "    max_item, sign = find_max(orig_nodes, orig_edges , res, solutions)\n",
+    "    max_item, sign = find_max(orig_nodes, orig_edges, res, solutions)\n",
     "\n",
     "    # create a copy of the graph\n",
     "    new_graph = copy.deepcopy(graph)\n",
@@ -210,10 +210,13 @@
     "            exclusions += list(max_item)\n",
     "\n",
     "        elif sign < 0:\n",
-    "            # remove all nodes connected to both nodes \n",
-    "            intersect = list(set( list(graph.adj[max_item[0]].keys()) ) & set( list(graph.adj[max_item[0]].keys()) ))\n",
+    "            # remove all nodes connected to both nodes\n",
+    "            intersect = list(\n",
+    "                set(list(graph.adj[max_item[0]].keys()))\n",
+    "                & set(list(graph.adj[max_item[0]].keys()))\n",
+    "            )\n",
     "            new_graph.remove_nodes_from(intersect)\n",
-    "            exclusions += intersect \n",
+    "            exclusions += intersect\n",
     "\n",
     "    return new_graph, solutions, sign, exclusions"
    ]
@@ -237,13 +240,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def qiro_rx_mixer(solutions = [], exclusions = []):\n",
+    "def qiro_rx_mixer(solutions=[], exclusions=[]):\n",
     "    union = solutions + exclusions\n",
+    "\n",
     "    def RX_mixer(qv, beta):\n",
     "        for i in range(len(qv)):\n",
     "            # DONT mix solutions or exclusions\n",
     "            if not i in union:\n",
     "                rx(2 * beta, qv[i])\n",
+    "\n",
     "    return RX_mixer"
    ]
   },
@@ -266,10 +271,11 @@
     "\n",
     "    problem = problem_updated[0]\n",
     "    solutions = problem_updated[1]\n",
+    "\n",
     "    def cost_operator(qv, gamma):\n",
     "        for pair in list(problem.edges()):\n",
-    "            #cx(qv[pair[0]], qv[pair[1]])\n",
-    "            rzz(3*gamma, qv[pair[0]], qv[pair[1]])\n",
+    "            # cx(qv[pair[0]], qv[pair[1]])\n",
+    "            rzz(3 * gamma, qv[pair[0]], qv[pair[1]])\n",
     "            rz(-gamma, qv[pair[0]])\n",
     "            rz(-gamma, qv[pair[1]])\n",
     "        for i in problem.nodes():\n",
@@ -306,14 +312,20 @@
    "outputs": [],
    "source": [
     "from qrisp import QuantumVariable\n",
-    "from qrisp.qiro import QIROProblem, create_max_indep_replacement_routine, create_max_indep_cost_operator_reduced, qiro_rx_mixer, qiro_init_function\n",
+    "from qrisp.qiro import (\n",
+    "    QIROProblem,\n",
+    "    create_max_indep_replacement_routine,\n",
+    "    create_max_indep_cost_operator_reduced,\n",
+    "    qiro_rx_mixer,\n",
+    "    qiro_init_function,\n",
+    ")\n",
     "from qrisp.qaoa import create_max_indep_set_cl_cost_function\n",
     "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
     "\n",
     "# define a random graph via the number of nodes and the QuantumVariable arguments\n",
     "num_nodes = 13\n",
-    "G = nx.erdos_renyi_graph(num_nodes, 0.4, seed = 107)\n",
+    "G = nx.erdos_renyi_graph(num_nodes, 0.4, seed=107)\n",
     "qarg = QuantumVariable(G.number_of_nodes())"
    ]
   },
@@ -332,14 +344,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assign the correct new update functions for qiro \n",
-    "qiro_instance = QIROProblem(G,\n",
-    "                            replacement_routine=create_max_indep_replacement_routine,\n",
-    "                            cost_operator=create_max_indep_cost_operator_reduced,\n",
-    "                            mixer=qiro_rx_mixer,\n",
-    "                            cl_cost_function=create_max_indep_set_cl_cost_function,\n",
-    "                            init_function=qiro_init_function\n",
-    "                            )"
+    "# assign the correct new update functions for qiro\n",
+    "qiro_instance = QIROProblem(\n",
+    "    G,\n",
+    "    replacement_routine=create_max_indep_replacement_routine,\n",
+    "    cost_operator=create_max_indep_cost_operator_reduced,\n",
+    "    mixer=qiro_rx_mixer,\n",
+    "    cl_cost_function=create_max_indep_set_cl_cost_function,\n",
+    "    init_function=qiro_init_function,\n",
+    ")"
    ]
   },
   {
@@ -415,9 +428,9 @@
     "\n",
     "print(\"5 most likely QIRO solutions\")\n",
     "max_five_qiro = sorted(res_qiro, key=res_qiro.get, reverse=True)[:5]\n",
-    "for res in max_five_qiro: \n",
-    "    print([index for index, value in enumerate(res) if value == '1'])\n",
-    "    print(cl_cost({res : 1}))"
+    "for res in max_five_qiro:\n",
+    "    print([index for index, value in enumerate(res) if value == \"1\"])\n",
+    "    print(cl_cost({res: 1}))"
    ]
   },
   {
@@ -478,9 +491,16 @@
    "source": [
     "final_graph = qiro_instance.problem\n",
     "plt.figure(1)\n",
-    "nx.draw(final_graph, with_labels=True, font_color='white', node_size=1000, font_size=22,\n",
-    " node_color='#20306f', edge_color='#D3D3D3')\n",
-    "plt.title('Final QIRO graph')\n",
+    "nx.draw(\n",
+    "    final_graph,\n",
+    "    with_labels=True,\n",
+    "    font_color=\"white\",\n",
+    "    node_size=1000,\n",
+    "    font_size=22,\n",
+    "    node_color=\"#20306f\",\n",
+    "    edge_color=\"#D3D3D3\",\n",
+    ")\n",
+    "plt.title(\"Final QIRO graph\")\n",
     "plt.show()"
    ]
   },
@@ -511,19 +531,24 @@
     }
    ],
    "source": [
-    "from qrisp.algorithms.qiro import qiro_rz_mixer, create_max_indep_controlled_mixer_reduced, qiro_max_indep_set_init_function\n",
+    "from qrisp.algorithms.qiro import (\n",
+    "    qiro_rz_mixer,\n",
+    "    create_max_indep_controlled_mixer_reduced,\n",
+    "    qiro_max_indep_set_init_function,\n",
+    ")\n",
     "\n",
-    "# assign the correct update functions for constrained qiro \n",
-    "qiro_instance = QIROProblem(G, \n",
-    "                            create_max_indep_replacement_routine,\n",
-    "                            qiro_rz_mixer,\n",
-    "                            create_max_indep_controlled_mixer_reduced,\n",
-    "                            create_max_indep_set_cl_cost_function,\n",
-    "                            qiro_max_indep_set_init_function,\n",
-    "                            )\n",
+    "# assign the correct update functions for constrained qiro\n",
+    "qiro_instance = QIROProblem(\n",
+    "    G,\n",
+    "    create_max_indep_replacement_routine,\n",
+    "    qiro_rz_mixer,\n",
+    "    create_max_indep_controlled_mixer_reduced,\n",
+    "    create_max_indep_set_cl_cost_function,\n",
+    "    qiro_max_indep_set_init_function,\n",
+    ")\n",
     "\n",
     "# We run the qiro instance and get the results!\n",
-    "res_qiro = qiro_instance.run_qiro(qarg=qarg, depth=3, n_recursions=1)\n"
+    "res_qiro = qiro_instance.run_qiro(qarg=qarg, depth=3, n_recursions=1)"
    ]
   },
   {
@@ -556,8 +581,8 @@
     "print(\"5 most likely QIRO solutions\")\n",
     "max_five_qiro = sorted(res_qiro, key=res_qiro.get, reverse=True)[:5]\n",
     "for res in max_five_qiro:\n",
-    "    print([index for index, value in enumerate(res) if value == '1'])\n",
-    "    print(cl_cost({res : 1}))"
+    "    print([index for index, value in enumerate(res) if value == \"1\"])\n",
+    "    print(cl_cost({res: 1}))"
    ]
   },
   {
