--- a/documentation/source/general/tutorial/QMCItutorial.ipynb
+++ b/documentation/source/general/tutorial/QMCItutorial.ipynb
@@ -135,14 +135,17 @@
    "source": [
     "from qrisp import *\n",
     "\n",
+    "\n",
     "def function(qf):\n",
-    "    return qf*qf\n",
+    "    return qf * qf\n",
+    "\n",
     "\n",
     "def distribution(qf):\n",
     "    h(qf)\n",
     "\n",
-    "qf_x = QuantumFloat(3,-3)\n",
-    "qf_y = QuantumFloat(6,-6)\n",
+    "\n",
+    "qf_x = QuantumFloat(3, -3)\n",
+    "qf_y = QuantumFloat(6, -6)\n",
     "\n",
     "qbl = QuantumBool()"
    ]
@@ -168,7 +171,7 @@
     "    distribution(qf_x)\n",
     "    h(qf_y)\n",
     "\n",
-    "    with(qf_y < function(qf_x)):\n",
+    "    with qf_y < function(qf_x):\n",
     "        x(qbl)"
    ]
   },
@@ -202,7 +205,7 @@
     }
    ],
    "source": [
-    "a = IQAE([qf_x,qf_y,qbl], state_function, eps=0.01, alpha=0.01)"
+    "a = IQAE([qf_x, qf_y, qbl], state_function, eps=0.01, alpha=0.01)"
    ]
   },
   {
@@ -234,7 +237,7 @@
     "print(a)\n",
     "\n",
     "N = 8\n",
-    "print(sum((i/N)**2 for i in range(N))/N)"
+    "print(sum((i / N) ** 2 for i in range(N)) / N)"
    ]
   },
   {
