--- a/documentation/source/general/tutorial/Shor.ipynb
+++ b/documentation/source/general/tutorial/Shor.ipynb
@@ -130,6 +130,7 @@
    "outputs": [],
    "source": [
     "from qrisp import *\n",
+    "\n",
     "N = 13\n",
     "qg = QuantumModulus(N)\n",
     "qg[:] = 8"
@@ -247,7 +248,7 @@
    ],
    "source": [
     "n = qg.size\n",
-    "qpe_res = QuantumFloat(2*n+1, exponent = -(2*n+1))\n",
+    "qpe_res = QuantumFloat(2 * n + 1, exponent=-(2 * n + 1))\n",
     "h(qpe_res)"
    ]
   },
@@ -272,7 +273,7 @@
     "for i in range(len(qpe_res)):\n",
     "    with control(qpe_res[i]):\n",
     "        qg *= x\n",
-    "        x = (x*x)%N"
+    "        x = (x * x) % N"
    ]
   },
   {
@@ -300,7 +301,7 @@
     }
    ],
    "source": [
-    "QFT(qpe_res, inv = True)\n",
+    "QFT(qpe_res, inv=True)\n",
     "meas_res = qpe_res.get_measurement()\n",
     "print(meas_res)"
    ]
@@ -322,8 +323,11 @@
    "source": [
     "from sympy import continued_fraction_convergents, continued_fraction_iterator, Rational\n",
     "\n",
+    "\n",
     "def get_r_candidates(approx):\n",
-    "    rationals = continued_fraction_convergents(continued_fraction_iterator(Rational(approx)))\n",
+    "    rationals = continued_fraction_convergents(\n",
+    "        continued_fraction_iterator(Rational(approx))\n",
+    "    )\n",
     "    return [rat.q for rat in rationals]"
    ]
   },
@@ -360,8 +364,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for cand in r_candidates:  \n",
-    "    if (a**cand)%N == 1:\n",
+    "for cand in r_candidates:\n",
+    "    if (a**cand) % N == 1:\n",
     "        r = cand\n",
     "        break\n",
     "else:\n",
@@ -395,7 +399,8 @@
    ],
    "source": [
     "import numpy as np\n",
-    "g = np.gcd(a**(r//2)+1, N)\n",
+    "\n",
+    "g = np.gcd(a ** (r // 2) + 1, N)\n",
     "print(g)"
    ]
   },
@@ -419,13 +424,13 @@
     "def find_order(a, N):\n",
     "    qg = QuantumModulus(N)\n",
     "    qg[:] = 1\n",
-    "    qpe_res = QuantumFloat(2*qg.size + 1, exponent = -(2*qg.size + 1))\n",
+    "    qpe_res = QuantumFloat(2 * qg.size + 1, exponent=-(2 * qg.size + 1))\n",
     "    h(qpe_res)\n",
     "    for i in range(len(qpe_res)):\n",
     "        with control(qpe_res[i]):\n",
     "            qg *= a\n",
-    "            a = (a*a)%N\n",
-    "    QFT(qpe_res, inv = True)\n",
+    "            a = (a * a) % N\n",
+    "    QFT(qpe_res, inv=True)\n",
     "    return qpe_res.get_measurement()"
    ]
   },
