--- a/documentation/source/general/tutorial/TSP.ipynb
+++ b/documentation/source/general/tutorial/TSP.ipynb
@@ -27,10 +27,17 @@
     "\n",
     "city_amount = 4\n",
     "\n",
-    "distance_matrix = np.array([[0,     0.25,   0.125,  0.5],\n",
-    "                            [0.25,  0,      0.625,  0.375],\n",
-    "                            [0.125, 0.625,  0,      0.75],\n",
-    "                            [0.5,   0.375,  0.75,   0]])/city_amount"
+    "distance_matrix = (\n",
+    "    np.array(\n",
+    "        [\n",
+    "            [0, 0.25, 0.125, 0.5],\n",
+    "            [0.25, 0, 0.625, 0.375],\n",
+    "            [0.125, 0.625, 0, 0.75],\n",
+    "            [0.5, 0.375, 0.75, 0],\n",
+    "        ]\n",
+    "    )\n",
+    "    / city_amount\n",
+    ")"
    ]
   },
   {
@@ -55,11 +62,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Receives a QuantumArray qa and a QuantumFloat index and \n",
-    "#then swaps the entry specified by index to the first position of the QuantumArray\n",
+    "# Receives a QuantumArray qa and a QuantumFloat index and\n",
+    "# then swaps the entry specified by index to the first position of the QuantumArray\n",
     "def swap_to_front(qa, index):\n",
     "    with invert():\n",
-    "        demux(qa[0], index, qa, permit_mismatching_size = True)"
+    "        demux(qa[0], index, qa, permit_mismatching_size=True)"
    ]
   },
   {
@@ -77,20 +84,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Receives a list of QuantumFloats, which specify a permuation \n",
-    "#and then returns QuantumArray holding that permutation\n",
+    "# Receives a list of QuantumFloats, which specify a permuation\n",
+    "# and then returns QuantumArray holding that permutation\n",
     "def eval_perm(perm_specifiers):\n",
     "\n",
-    "    #Specify the size of the QuantumFloats, which will represent the cities\n",
+    "    # Specify the size of the QuantumFloats, which will represent the cities\n",
     "    city_specifier_size = int(np.ceil(np.log2(city_amount)))\n",
     "\n",
-    "    #Create the QuantumArray, which will hold the permutations\n",
+    "    # Create the QuantumArray, which will hold the permutations\n",
     "    qa = QuantumArray(QuantumFloat(city_specifier_size), city_amount)\n",
     "\n",
-    "    #Initialize the QuantumArray with the identity permutation, ie. (0,1,2..)\n",
+    "    # Initialize the QuantumArray with the identity permutation, ie. (0,1,2..)\n",
     "    qa[:] = np.arange(city_amount)\n",
     "\n",
-    "    #Iteratively swap \n",
+    "    # Iteratively swap\n",
     "    for i in range(city_amount - 1):\n",
     "        swap_to_front(qa[i:], perm_specifiers[i])\n",
     "\n",
@@ -114,15 +121,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Function that returns a list of QuantumFloats, \n",
-    "#specifying the permutations (these will be in uniform superposition)\n",
+    "# Function that returns a list of QuantumFloats,\n",
+    "# specifying the permutations (these will be in uniform superposition)\n",
     "def create_perm_specifiers(city_amount):\n",
     "\n",
     "    perm_specifiers = []\n",
     "\n",
     "    for i in range(city_amount - 1):\n",
     "\n",
-    "        qf_size = int(np.ceil(np.log2(city_amount-i)))\n",
+    "        qf_size = int(np.ceil(np.log2(city_amount - i)))\n",
     "\n",
     "        temp_qf = QuantumFloat(qf_size)\n",
     "\n",
@@ -198,7 +205,8 @@
    ],
    "source": [
     "perm_specifiers = create_perm_specifiers(city_amount)\n",
-    "for qv in perm_specifiers: h(qv)\n",
+    "for qv in perm_specifiers:\n",
+    "    h(qv)\n",
     "perm = eval_perm(perm_specifiers)\n",
     "multi_measurement(perm_specifiers + [perm])"
    ]
@@ -229,7 +237,7 @@
     "def cl_route_distance(itinerary):\n",
     "    res = 0\n",
     "    for i in range(city_amount):\n",
-    "        res += distance_matrix[itinerary[i], itinerary[(i+1)%city_amount]]\n",
+    "        res += distance_matrix[itinerary[i], itinerary[(i + 1) % city_amount]]\n",
     "    return res"
    ]
   },
@@ -255,8 +263,8 @@
    "outputs": [],
    "source": [
     "@as_hamiltonian\n",
-    "def trip_distance(i, j, iter = 1):\n",
-    "    return distance_matrix[i, j]*2*np.pi*iter"
+    "def trip_distance(i, j, iter=1):\n",
+    "    return distance_matrix[i, j] * 2 * np.pi * iter"
    ]
   },
   {
@@ -285,11 +293,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def phase_apply_summed_distance(itinerary, iter = 1):\n",
+    "def phase_apply_summed_distance(itinerary, iter=1):\n",
     "\n",
     "    n = len(itinerary)\n",
     "    for i in range(n):\n",
-    "        trip_distance(itinerary[i], itinerary[(i+1)%n], iter = iter)"
+    "        trip_distance(itinerary[i], itinerary[(i + 1) % n], iter=iter)"
    ]
   },
   {
@@ -310,10 +318,9 @@
     "@lifted\n",
     "def qpe_calc_perm_travel_distance(itinerary, precision):\n",
     "\n",
-    "    return QPE(itinerary, \n",
-    "               phase_apply_summed_distance,\n",
-    "               precision = precision, \n",
-    "               iter_spec = True)"
+    "    return QPE(\n",
+    "        itinerary, phase_apply_summed_distance, precision=precision, iter_spec=True\n",
+    "    )"
    ]
   },
   {
@@ -351,8 +358,8 @@
     }
    ],
    "source": [
-    "test_itinerary = QuantumArray(qtype = QuantumFloat(2), shape=(4))\n",
-    "test_itinerary[:] = [2,3,0,1]\n",
+    "test_itinerary = QuantumArray(qtype=QuantumFloat(2), shape=(4))\n",
+    "test_itinerary[:] = [2, 3, 0, 1]\n",
     "cl_route_distance(test_itinerary.most_likely())"
    ]
   },
@@ -394,21 +401,21 @@
    "source": [
     "def qdict_calc_perm_travel_distance(itinerary, precision):\n",
     "\n",
-    "    #A QuantumFloat with n qubits and exponent -n \n",
-    "    #can represent values between 0 and 1\n",
+    "    # A QuantumFloat with n qubits and exponent -n\n",
+    "    # can represent values between 0 and 1\n",
     "    res = QuantumFloat(precision, -precision)\n",
     "\n",
-    "    #Fill QuantumDictionary with values\n",
-    "    qd = QuantumDictionary(return_type = res)\n",
+    "    # Fill QuantumDictionary with values\n",
+    "    qd = QuantumDictionary(return_type=res)\n",
     "    for i in range(city_amount):\n",
     "        for j in range(city_amount):\n",
     "            qd[i, j] = distance_matrix[i, j]\n",
     "\n",
-    "    #Evaluate result\n",
+    "    # Evaluate result\n",
     "    for i in range(city_amount):\n",
-    "        trip_distance = qd[itinerary[i], itinerary[(i+1)%city_amount]]\n",
+    "        trip_distance = qd[itinerary[i], itinerary[(i + 1) % city_amount]]\n",
     "        res += trip_distance\n",
-    "        trip_distance.uncompute(recompute = True)\n",
+    "        trip_distance.uncompute(recompute=True)\n",
     "\n",
     "    return res"
    ]
@@ -446,8 +453,8 @@
     }
    ],
    "source": [
-    "test_itinerary = QuantumArray(qtype = QuantumFloat(2), shape=(4))\n",
-    "test_itinerary[:] = [2,3,0,1]\n",
+    "test_itinerary = QuantumArray(qtype=QuantumFloat(2), shape=(4))\n",
+    "test_itinerary[:] = [2, 3, 0, 1]\n",
     "qdict_res = qdict_calc_perm_travel_distance(test_itinerary, 5)\n",
     "print(qdict_res)"
    ]
@@ -609,9 +616,10 @@
    "source": [
     "from qrisp import auto_uncompute, z\n",
     "\n",
+    "\n",
     "@auto_uncompute\n",
-    "def eval_distance_threshold(perm_specifiers, precision, threshold, method = \"qpe\"):\n",
-    "   \n",
+    "def eval_distance_threshold(perm_specifiers, precision, threshold, method=\"qpe\"):\n",
+    "\n",
     "    itinerary = eval_perm(perm_specifiers)\n",
     "\n",
     "    if method == \"qdict\":\n",
@@ -620,8 +628,8 @@
     "        distance = qpe_calc_perm_travel_distance(itinerary, precision)\n",
     "    else:\n",
     "        raise Exception(f\"Don't know method {method}\")\n",
-    "         \n",
-    "    is_below_treshold = (distance <= threshold)\n",
+    "\n",
+    "    is_below_treshold = distance <= threshold\n",
     "\n",
     "    z(is_below_treshold)"
    ]
@@ -696,23 +704,34 @@
     }
    ],
    "source": [
-    "#Create permutation specifiers\n",
+    "# Create permutation specifiers\n",
     "perm_specifiers = create_perm_specifiers(city_amount)\n",
     "\n",
     "from math import factorial\n",
-    "#Determine an estimate for the amount of winner states\n",
-    "#(Average number of computational basis states per permutation) * (4 cyclic shifts)*(2 directions)\n",
-    "winner_state_amount = (2**sum([qv.size for qv in perm_specifiers])/factorial(city_amount))*city_amount*2 \n",
+    "\n",
+    "# Determine an estimate for the amount of winner states\n",
+    "# (Average number of computational basis states per permutation) * (4 cyclic shifts)*(2 directions)\n",
+    "winner_state_amount = (\n",
+    "    (2 ** sum([qv.size for qv in perm_specifiers]) / factorial(city_amount))\n",
+    "    * city_amount\n",
+    "    * 2\n",
+    ")\n",
     "\n",
     "from qrisp.grover import grovers_alg\n",
     "\n",
-    "#Evaluate Grovers algorithm\n",
-    "grovers_alg(perm_specifiers, #Permutation specifiers\n",
-    "            eval_distance_threshold, #Oracle function\n",
-    "            kwargs = {\"threshold\" : 0.4, \"precision\" : 5, \"method\" : \"qpe\"}, #Specify the keyword arguments for the Oracle\n",
-    "            winner_state_amount = winner_state_amount) #Specify the estimated amount of winners \n",
+    "# Evaluate Grovers algorithm\n",
+    "grovers_alg(\n",
+    "    perm_specifiers,  # Permutation specifiers\n",
+    "    eval_distance_threshold,  # Oracle function\n",
+    "    kwargs={\n",
+    "        \"threshold\": 0.4,\n",
+    "        \"precision\": 5,\n",
+    "        \"method\": \"qpe\",\n",
+    "    },  # Specify the keyword arguments for the Oracle\n",
+    "    winner_state_amount=winner_state_amount,\n",
+    ")  # Specify the estimated amount of winners\n",
     "\n",
-    "#Retrieve measurement\n",
+    "# Retrieve measurement\n",
     "res = multi_measurement(perm_specifiers)\n",
     "res"
    ]
