--- a/documentation/source/general/tutorial/HHL.ipynb
+++ b/documentation/source/general/tutorial/HHL.ipynb
@@ -94,12 +94,13 @@
    "source": [
     "from qrisp import *\n",
     "\n",
+    "\n",
     "def fake_inversion(qf, res=None):\n",
     "    if res is None:\n",
-    "        res = QuantumFloat(qf.size+1)\n",
+    "        res = QuantumFloat(qf.size + 1)\n",
     "\n",
     "    for i in jrange(qf.size):\n",
-    "        cx(qf[i],res[qf.size-i])\n",
+    "        cx(qf[i], res[qf.size - i])\n",
     "\n",
     "    return res"
    ]
@@ -130,7 +131,7 @@
     }
    ],
    "source": [
-    "qf = QuantumFloat(3,-3)\n",
+    "qf = QuantumFloat(3, -3)\n",
     "x(qf[2])\n",
     "dicke_state(qf, 1)\n",
     "res = fake_inversion(qf)\n",
@@ -175,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@RUS(static_argnums = [0,1])\n",
+    "@RUS(static_argnums=[0, 1])\n",
     "def HHL_encoding(b, hamiltonian_evolution, n, precision):\n",
     "\n",
     "    # Prepare the state |b>. Step 1\n",
@@ -183,17 +184,17 @@
     "    # Reverse the endianness for compatibility with Hamiltonian simulation.\n",
     "    prepare(qf, b, reversed=True)\n",
     "\n",
-    "    qpe_res = QPE(qf, hamiltonian_evolution, precision=precision) # Step 2\n",
-    "    inv_res = fake_inversion(qpe_res) # Step 3\n",
+    "    qpe_res = QPE(qf, hamiltonian_evolution, precision=precision)  # Step 2\n",
+    "    inv_res = fake_inversion(qpe_res)  # Step 3\n",
     "\n",
     "    case_indicator = QuantumFloat(inv_res.size)\n",
     "\n",
     "    with conjugate(h)(case_indicator):\n",
-    "        qbl = (case_indicator >= inv_res)\n",
-    "    \n",
+    "        qbl = case_indicator >= inv_res\n",
+    "\n",
     "    cancellation_bool = (measure(case_indicator) == 0) & (measure(qbl) == 0)\n",
     "\n",
-    "    # The first return value is a boolean. \n",
+    "    # The first return value is a boolean.\n",
     "    # Additional return values are QuantumVariables.\n",
     "    return cancellation_bool, qf, qpe_res, inv_res"
    ]
@@ -228,15 +229,15 @@
     "def HHL(b, hamiltonian_evolution, n, precision):\n",
     "\n",
     "    qf, qpe_res, inv_res = HHL_encoding(b, hamiltonian_evolution, n, precision)\n",
-    "    \n",
+    "\n",
     "    with invert():\n",
     "        QPE(qf, hamiltonian_evolution, target=qpe_res)\n",
     "        fake_inversion(qpe_res, res=inv_res)\n",
     "\n",
     "    # Reverse the endianness for compatibility with Hamiltonian simulation.\n",
-    "    for i in jrange(qf.size//2):\n",
-    "        swap(qf[i],qf[n-i-1])\n",
-    "    \n",
+    "    for i in jrange(qf.size // 2):\n",
+    "        swap(qf[i], qf[n - i - 1])\n",
+    "\n",
     "    return qf"
    ]
   },
@@ -263,16 +264,17 @@
     "from qrisp.operators import QubitOperator\n",
     "import numpy as np\n",
     "\n",
-    "A = np.array([[3/8, 1/8], \n",
-    "              [1/8, 3/8]])\n",
+    "A = np.array([[3 / 8, 1 / 8], [1 / 8, 3 / 8]])\n",
     "\n",
-    "b = np.array([1,1])\n",
+    "b = np.array([1, 1])\n",
     "\n",
     "H = QubitOperator.from_matrix(A).to_pauli()\n",
     "\n",
     "# By default e^{-itH} is performed. Therefore, we set t=-pi.\n",
+    "\n",
+    "\n",
     "def U(qf):\n",
-    "    H.trotterization()(qf,t=-np.pi,steps=1)"
+    "    H.trotterization()(qf, t=-np.pi, steps=1)"
    ]
   },
   {
@@ -305,6 +307,7 @@
     "    x = HHL(tuple(b), U, 1, 3)\n",
     "    return x\n",
     "\n",
+    "\n",
     "res_dict = main()\n",
     "\n",
     "for k, v in res_dict.items():\n",
@@ -336,7 +339,7 @@
     }
    ],
    "source": [
-    "x = (np.linalg.inv(A)@b)/np.linalg.norm(np.linalg.inv(A)@b)\n",
+    "x = (np.linalg.inv(A) @ b) / np.linalg.norm(np.linalg.inv(A) @ b)\n",
     "print(x)"
    ]
   },
@@ -387,24 +390,27 @@
    "source": [
     "def hermitian_matrix_with_power_of_2_eigenvalues(n):\n",
     "    # Generate eigenvalues as inverse powers of 2.\n",
-    "    eigenvalues = 1/np.exp2(np.random.randint(1, 4, size=n))\n",
-    "    \n",
+    "    eigenvalues = 1 / np.exp2(np.random.randint(1, 4, size=n))\n",
+    "\n",
     "    # Generate a random unitary matrix.\n",
     "    Q, _ = np.linalg.qr(np.random.randn(n, n))\n",
-    "    \n",
+    "\n",
     "    # Construct the Hermitian matrix.\n",
     "    A = Q @ np.diag(eigenvalues) @ Q.conj().T\n",
-    "    \n",
+    "\n",
     "    return A\n",
     "\n",
-    "# Example \n",
+    "\n",
+    "# Example\n",
     "n = 3\n",
     "A = hermitian_matrix_with_power_of_2_eigenvalues(2**n)\n",
     "\n",
     "H = QubitOperator.from_matrix(A).to_pauli()\n",
     "\n",
+    "\n",
     "def U(qf):\n",
-    "    H.trotterization()(qf,t=-np.pi,steps=5)\n",
+    "    H.trotterization()(qf, t=-np.pi, steps=5)\n",
+    "\n",
     "\n",
     "b = np.random.randint(0, 2, size=2**n)\n",
     "\n",
@@ -450,6 +456,7 @@
     "    x = HHL(tuple(b), U, n, 4)\n",
     "    return x\n",
     "\n",
+    "\n",
     "res_dict = main()\n",
     "\n",
     "for k, v in res_dict.items():\n",
@@ -482,7 +489,7 @@
     }
    ],
    "source": [
-    "x = (np.linalg.inv(A)@b)/np.linalg.norm(np.linalg.inv(A)@b)\n",
+    "x = (np.linalg.inv(A) @ b) / np.linalg.norm(np.linalg.inv(A) @ b)\n",
     "print(x)"
    ]
   },
