--- a/documentation/source/general/tutorial/Jasp.ipynb
+++ b/documentation/source/general/tutorial/Jasp.ipynb
@@ -20,8 +20,9 @@
    "outputs": [],
    "source": [
     "from qrisp import *\n",
+    "\n",
     "N = 19326409253\n",
-    "qm = QuantumModulus(N, inpl_adder = gidney_adder)\n",
+    "qm = QuantumModulus(N, inpl_adder=gidney_adder)\n",
     "qm[:] = 293587334\n",
     "qm *= 2345747462"
    ]
@@ -44,7 +45,7 @@
     "from qiskit.circuit.library import RGQFTMultiplier\n",
     "\n",
     "n = 50\n",
-    "multiplication_circuit = RGQFTMultiplier(n, 2*n)"
+    "multiplication_circuit = RGQFTMultiplier(n, 2 * n)"
    ]
   },
   {
@@ -104,13 +105,16 @@
    "source": [
     "import jax.numpy as jnp\n",
     "\n",
+    "\n",
     "def test_f(x):\n",
     "    y = x + 2\n",
     "    z = jnp.sin(y)\n",
-    "    return y*z\n",
-    "    \n",
+    "    return y * z\n",
+    "\n",
+    "\n",
     "from jax import make_jaxpr\n",
-    "x = jnp.array([1.,2.,3.])\n",
+    "\n",
+    "x = jnp.array([1.0, 2.0, 3.0])\n",
     "print(make_jaxpr(test_f)(x))"
    ]
   },
@@ -154,6 +158,7 @@
    "source": [
     "from qrisp import *\n",
     "\n",
+    "\n",
     "def main(i):\n",
     "    qf = QuantumFloat(i)\n",
     "    h(qf[0])\n",
@@ -162,7 +167,7 @@
     "    meas_float = measure(qf)\n",
     "\n",
     "    return meas_float\n",
-    "    \n",
+    "\n",
     "\n",
     "jaspr = make_jaspr(main)(5)\n",
     "\n",
@@ -228,6 +233,7 @@
     "    meas_float = measure(qf)\n",
     "\n",
     "    return meas_float\n",
+    "\n",
     "\n",
     "print(main(5))\n",
     "# Yields: 0 or 3"
@@ -348,12 +354,14 @@
    "source": [
     "import time\n",
     "\n",
+    "\n",
     "@qache\n",
     "def inner_function(qv, i):\n",
     "    cx(qv[0], qv[1])\n",
     "    h(qv[i])\n",
     "    # Complicated compilation, that takes a lot of time\n",
     "    time.sleep(1)\n",
+    "\n",
     "\n",
     "def main(i):\n",
     "    qv = QuantumFloat(i)\n",
@@ -367,7 +375,7 @@
     "\n",
     "t0 = time.time()\n",
     "jaspr = make_jaspr(main)(5)\n",
-    "print(time.time()- t0)\n",
+    "print(time.time() - t0)\n",
     "# Yields:\n",
     "# 1.0196595191955566"
    ]
@@ -400,6 +408,7 @@
     "    x(qv)\n",
     "    time.sleep(1)\n",
     "\n",
+    "\n",
     "def main():\n",
     "    qf = QuantumFloat(5)\n",
     "    qbl = QuantumBool()\n",
@@ -411,9 +420,10 @@
     "\n",
     "    return measure(qf)\n",
     "\n",
+    "\n",
     "t0 = time.time()\n",
     "jaspr = make_jaspr(main)()\n",
-    "print(time.time()- t0)\n",
+    "print(time.time() - t0)\n",
     "# Yields:\n",
     "# 2.044877767562866"
    ]
@@ -449,13 +459,14 @@
    "source": [
     "from jax.core import Tracer\n",
     "\n",
+    "\n",
     "def main(i):\n",
     "    print(\"i is dynamic?: \", isinstance(i, Tracer))\n",
-    "    \n",
+    "\n",
     "    qf = QuantumFloat(5)\n",
     "    j = qf.size\n",
     "    print(\"j is dynamic?: \", isinstance(i, Tracer))\n",
-    "    \n",
+    "\n",
     "    h(qf)\n",
     "    k = measure(qf)\n",
     "    print(\"k is dynamic?: \", isinstance(k, Tracer))\n",
@@ -467,11 +478,13 @@
     "    # Arbitrary Python objects can be used within Jasp\n",
     "    # but they are not dynamic\n",
     "    import networkx as nx\n",
+    "\n",
     "    G = nx.DiGraph()\n",
-    "    G.add_edge(1,2)\n",
+    "    G.add_edge(1, 2)\n",
     "    print(\"G is dynamic?: \", isinstance(l, Tracer))\n",
-    "    \n",
+    "\n",
     "    return k\n",
+    "\n",
     "\n",
     "jaspr = make_jaspr(main)(5)\n",
     "# Yields:\n",
@@ -520,9 +533,10 @@
     "    for i in jrange(c):\n",
     "\n",
     "        # Performs a quantum incrementation on b based on the measurement outcome\n",
-    "        b += c//5\n",
+    "        b += c // 5\n",
     "\n",
     "    return measure(b)\n",
+    "\n",
     "\n",
     "print(main(5))"
    ]
@@ -547,11 +561,11 @@
     "\n",
     "    a = QuantumFloat(5)\n",
     "    a[:] = i\n",
-    "    \n",
+    "\n",
     "    qbl = QuantumBool()\n",
     "\n",
     "    # a[:j] is a dynamic amount of controls\n",
-    "    mcx(a[:j], qbl[0], ctrl_state = k)\n",
+    "    mcx(a[:j], qbl[0], ctrl_state=k)\n",
     "\n",
     "    return measure(qbl)"
    ]
@@ -626,11 +640,12 @@
     "\n",
     "    # This is a classical, dynamical bool\n",
     "    ctrl_bl = meas_res >= 4\n",
-    "    \n",
+    "\n",
     "    with control(ctrl_bl):\n",
     "        qf -= 4\n",
     "\n",
     "    return measure(qf)\n",
+    "\n",
     "\n",
     "for i in range(5):\n",
     "    print(main())"
@@ -670,20 +685,23 @@
     "from qrisp.jasp import RUS, make_jaspr\n",
     "from qrisp import QuantumFloat, h, cx, measure\n",
     "\n",
+    "\n",
     "def init_GHZ(qf):\n",
     "    h(qf[0])\n",
     "    for i in jrange(1, qf.size):\n",
     "        cx(qf[0], qf[i])\n",
+    "\n",
     "\n",
     "@RUS\n",
     "def rus_trial_function():\n",
     "    qf = QuantumFloat(5)\n",
     "\n",
     "    init_GHZ(qf)\n",
-    "    \n",
+    "\n",
     "    cancelation_bool = measure(qf[0])\n",
-    "    \n",
+    "\n",
     "    return cancelation_bool, qf\n",
+    "\n",
     "\n",
     "@jaspify\n",
     "def main():\n",
@@ -691,6 +709,7 @@
     "    qf = rus_trial_function()\n",
     "\n",
     "    return measure(qf)\n",
+    "\n",
     "\n",
     "print(main())\n",
     "# Yields:\n",
@@ -727,10 +746,11 @@
     "    qf = QuantumFloat(5)\n",
     "\n",
     "    init_GHZ(qf)\n",
-    "    \n",
+    "\n",
     "    cancelation_bool = measure(qf[0])\n",
-    "    \n",
+    "\n",
     "    return cancelation_bool, qf\n",
+    "\n",
     "\n",
     "@terminal_sampling\n",
     "def main():\n",
@@ -739,6 +759,7 @@
     "    h(qf[0])\n",
     "\n",
     "    return qf\n",
+    "\n",
     "\n",
     "print(main())\n",
     "# Yields:\n",
@@ -774,6 +795,7 @@
    "source": [
     "from qrisp import QuantumBool, measure, control\n",
     "\n",
+    "\n",
     "@terminal_sampling\n",
     "def main():\n",
     "\n",
@@ -792,6 +814,7 @@
     "        h(qf[2])\n",
     "\n",
     "    return qf\n",
+    "\n",
     "\n",
     "for i in range(5):\n",
     "    print(main())\n",
@@ -819,10 +842,12 @@
     "from qrisp import *\n",
     "from qrisp.jasp import *\n",
     "\n",
-    "def quantum_mult(a, b):\n",
-    "    return a*b\n",
     "\n",
-    "@boolean_simulation(bit_array_padding = 2**10)\n",
+    "def quantum_mult(a, b):\n",
+    "    return a * b\n",
+    "\n",
+    "\n",
+    "@boolean_simulation(bit_array_padding=2**10)\n",
     "def main(i, j, iterations):\n",
     "\n",
     "    a = QuantumFloat(10)\n",
@@ -833,10 +858,10 @@
     "\n",
     "    c = QuantumFloat(30)\n",
     "\n",
-    "    for i in jrange(iterations): \n",
+    "    for i in jrange(iterations):\n",
     "\n",
     "        # Compute the quantum product\n",
-    "        temp = quantum_mult(a,b)\n",
+    "        temp = quantum_mult(a, b)\n",
     "\n",
     "        # add into c\n",
     "        c += temp\n",
@@ -884,9 +909,10 @@
    ],
    "source": [
     "import time\n",
+    "\n",
     "t0 = time.time()\n",
     "main(1, 2, 5)\n",
-    "print(time.time()-t0)"
+    "print(time.time() - t0)"
    ]
   },
   {
@@ -914,7 +940,7 @@
    ],
    "source": [
     "t0 = time.time()\n",
-    "print(main(3, 4, 120)) # Expected to be 3*4*120 = 1440\n",
+    "print(main(3, 4, 120))  # Expected to be 3*4*120 = 1440\n",
     "print(f\"Took {time.time()-t0} to simulate 120 iterations\")"
    ]
   },
@@ -985,14 +1011,20 @@
     "import optax\n",
     "\n",
     "# Define the model\n",
+    "\n",
+    "\n",
     "def model(params, x):\n",
     "    W, b = params\n",
     "    return jax.nn.sigmoid(jnp.dot(x, W) + b)\n",
     "\n",
+    "\n",
     "# Define the loss function (binary cross-entropy)\n",
+    "\n",
+    "\n",
     "def loss_fn(params, x, y):\n",
     "    preds = model(params, x)\n",
     "    return -jnp.mean(y * jnp.log(preds) + (1 - y) * jnp.log(1 - preds))\n",
+    "\n",
     "\n",
     "# Initialize parameters\n",
     "key = jax.random.PRNGKey(0)\n",
@@ -1005,12 +1037,15 @@
     "opt_state = optimizer.init(params)\n",
     "\n",
     "# Define training step\n",
+    "\n",
+    "\n",
     "@jit\n",
     "def train_step(params, opt_state, x, y):\n",
     "    loss, grads = jax.value_and_grad(loss_fn)(params, x, y)\n",
     "    updates, opt_state = optimizer.update(grads, opt_state)\n",
     "    params = optax.apply_updates(params, updates)\n",
     "    return params, opt_state, loss\n",
+    "\n",
     "\n",
     "# Generate some dummy data\n",
     "key = jax.random.PRNGKey(0)\n",
@@ -1047,6 +1082,7 @@
     "from qrisp.jasp import *\n",
     "from qrisp import *\n",
     "\n",
+    "\n",
     "@RUS\n",
     "def rus_trial_function(params):\n",
     "\n",
@@ -1062,15 +1098,16 @@
     "    meas_res_1 = measure(qf_1)\n",
     "\n",
     "    # Turn the data into a Jax array\n",
-    "    X = jnp.array([meas_res_0,meas_res_1])/2**qf_0.size\n",
+    "    X = jnp.array([meas_res_0, meas_res_1]) / 2**qf_0.size\n",
     "\n",
     "    # Evaluate the model\n",
     "    model_res = model(params, X)\n",
     "\n",
     "    # Determine the cancelation\n",
     "    cancelation_bool = (model_res > 0.5)[0]\n",
-    "    \n",
+    "\n",
     "    return cancelation_bool, qf_0\n",
+    "\n",
     "\n",
     "@jaspify\n",
     "def main(params):\n",
@@ -1079,6 +1116,7 @@
     "    h(qf[0])\n",
     "\n",
     "    return measure(qf)\n",
+    "\n",
     "\n",
     "print(main(params))"
    ]
