--- a/documentation/source/general/tutorial/QAOAtutorial/PortfolioRebalancing.ipynb
+++ b/documentation/source/general/tutorial/QAOAtutorial/PortfolioRebalancing.ipynb
@@ -131,27 +131,27 @@
     "\n",
     "    l = q_array[1]\n",
     "    s = q_array[0]\n",
-    "    \n",
+    "\n",
     "    n = len(l)\n",
     "    band_prefix = dict()\n",
     "    max_pref = 0\n",
-    "    for index in range(n- lots +1): \n",
-    "        max_pref += math.comb(n, index)*math.comb(n, lots+ index)\n",
-    "        this_pref = math.comb(n, index)*math.comb(n, lots+ index)\n",
+    "    for index in range(n - lots + 1):\n",
+    "        max_pref += math.comb(n, index) * math.comb(n, lots + index)\n",
+    "        this_pref = math.comb(n, index) * math.comb(n, lots + index)\n",
     "        band_prefix.setdefault(str(index), this_pref)\n",
     "\n",
     "    x(l[-lots:])\n",
-    "    param = 2 * np.arccos(np.sqrt((band_prefix[\"0\"])/(max_pref)))\n",
-    "    ry(param,  s[-1])\n",
+    "    param = 2 * np.arccos(np.sqrt((band_prefix[\"0\"]) / (max_pref)))\n",
+    "    ry(param, s[-1])\n",
     "    qc_s = s[-1].qs()\n",
     "\n",
-    "    for index1 in range(1,lots):\n",
-    "        param = 2 * np.arccos(np.sqrt((band_prefix[str(index1)])/(max_pref)))\n",
+    "    for index1 in range(1, lots):\n",
+    "        param = 2 * np.arccos(np.sqrt((band_prefix[str(index1)]) / (max_pref)))\n",
     "        cry_gate = RYGate(param).control(1)\n",
-    "        qc_s.append(cry_gate, [s[-index1], s[-index1-1]])\n",
+    "        qc_s.append(cry_gate, [s[-index1], s[-index1 - 1]])\n",
     "\n",
-    "    for index2 in range(1,lots+1):\n",
-    "        cx(s[-index2],l[-lots -index2])"
+    "    for index2 in range(1, lots + 1):\n",
+    "        cx(s[-index2], l[-lots - index2])"
    ]
   },
   {
@@ -178,21 +178,21 @@
     "            dicke_state(qv, k)\n",
     "\n",
     "    def apply_mixer(q_array, beta):\n",
-    "        half = int(len(q_array[0])/2)\n",
+    "        half = int(len(q_array[0]) / 2)\n",
     "        qv1 = q_array[0]\n",
     "        qv2 = q_array[1]\n",
     "\n",
     "        # apply mcp gates for all dicke weights\n",
     "        with conjugate(inv_prepare_dicke)(qv1, half):\n",
     "            for i in range(half):\n",
-    "                ctrl_state = \"0\" * (half-i-1) + (\"1\"*(i+1))\n",
-    "                mcp(beta, qv1, ctrl_state = ctrl_state)\n",
-    "        \n",
+    "                ctrl_state = \"0\" * (half - i - 1) + (\"1\" * (i + 1))\n",
+    "                mcp(beta, qv1, ctrl_state=ctrl_state)\n",
+    "\n",
     "        with conjugate(inv_prepare_dicke)(qv2, half):\n",
     "            for i in range(half):\n",
-    "                ctrl_state = \"0\" * (half-i-1) + (\"1\"*(i+1))                   \n",
-    "                mcp(beta, qv2, ctrl_state = ctrl_state)\n",
-    "        \n",
+    "                ctrl_state = \"0\" * (half - i - 1) + (\"1\" * (i + 1))\n",
+    "                mcp(beta, qv2, ctrl_state=ctrl_state)\n",
+    "\n",
     "    return apply_mixer"
    ]
   },
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#imports\n",
+    "# imports\n",
     "import sklearn\n",
     "from sklearn import preprocessing  # Add explicit import for preprocessing\n",
     "import numpy as np\n",
@@ -237,11 +237,11 @@
     "# risk return factor\n",
     "risk_return = 0.9\n",
     "# trading costs\n",
-    "tc = 0.01 \n",
+    "tc = 0.01\n",
     "\n",
-    "# covariance between assets -- create covar_matrix \n",
+    "# covariance between assets -- create covar_matrix\n",
     "covar_string = \"99.8 42.5 37.2 40.3 38.0 30.0 46.8 14.9 42.5 100.5 41.1 15.2 71.1 27.8 47.5 12.7 37.2 41.1 181.3 17.9 38.4 27.9 39.0 8.3 40.3 15.2 17.9 253.1 12.4 48.7 33.3 3.8 38.0 71.1 38.4 12.4 84.7 28.5 42.0 13.1 30.0 27.8 27.9 48.7 28.5 173.1 28.9 -12.7 46.8 47.5 39.0 33.3 42.0 28.9 125.8 14.6 14.9 12.7 8.3 3.8 13.1 -12.7 14.6 179.0\"\n",
-    "li = list(covar_string.split(\" \")) \n",
+    "li = list(covar_string.split(\" \"))\n",
     "fin_list = [float(item) for item in li]\n",
     "norm_sigma_array = preprocessing.normalize([fin_list])\n",
     "norm_sigma_full = np.reshape(norm_sigma_array, (8, 8))\n",
@@ -249,19 +249,62 @@
     "\n",
     "# normalized asset returns\n",
     "import numpy as np\n",
+    "\n",
     "# first entry is return, second is covariance\n",
-    "data1 = [0.000401, 0.009988 ,-0.000316 ,0.014433, 0.000061, 0.010024  ,0.001230 ,0.014854 ,0.000916 ,0.013465 , -0.000176, 0.010974 ,-0.000619 ,0.015910 , 0.000396 ,0.010007 ,0.000212, 0.009201 , -0.000881, 0.013377 ,0.001477, 0.013156 , 0.000184, 0.009907 ,0.001047, 0.011216 , 0.000492, 0.008399 ,0.000794, 0.010052 , 0.000291, 0.013247 ,0.000204, 0.009193 , 0.000674 ,0.008477,0.001500, 0.014958 , 0.000491, 0.010873]\n",
-    "mu = [data1[i] for i in range(len(data1)) if i%2 ==0]\n",
+    "data1 = [\n",
+    "    0.000401,\n",
+    "    0.009988,\n",
+    "    -0.000316,\n",
+    "    0.014433,\n",
+    "    0.000061,\n",
+    "    0.010024,\n",
+    "    0.001230,\n",
+    "    0.014854,\n",
+    "    0.000916,\n",
+    "    0.013465,\n",
+    "    -0.000176,\n",
+    "    0.010974,\n",
+    "    -0.000619,\n",
+    "    0.015910,\n",
+    "    0.000396,\n",
+    "    0.010007,\n",
+    "    0.000212,\n",
+    "    0.009201,\n",
+    "    -0.000881,\n",
+    "    0.013377,\n",
+    "    0.001477,\n",
+    "    0.013156,\n",
+    "    0.000184,\n",
+    "    0.009907,\n",
+    "    0.001047,\n",
+    "    0.011216,\n",
+    "    0.000492,\n",
+    "    0.008399,\n",
+    "    0.000794,\n",
+    "    0.010052,\n",
+    "    0.000291,\n",
+    "    0.013247,\n",
+    "    0.000204,\n",
+    "    0.009193,\n",
+    "    0.000674,\n",
+    "    0.008477,\n",
+    "    0.001500,\n",
+    "    0.014958,\n",
+    "    0.000491,\n",
+    "    0.010873,\n",
+    "]\n",
+    "mu = [data1[i] for i in range(len(data1)) if i % 2 == 0]\n",
     "from sklearn import preprocessing\n",
+    "\n",
     "mu_array = np.array(mu)\n",
-    "#this is the normalized asset return array\n",
+    "# this is the normalized asset return array\n",
     "norm_mu_full = preprocessing.normalize([mu_array])\n",
     "\n",
     "\n",
     "# full problem instance\n",
     "asset_return = list(norm_mu_full[0][:n_assets])\n",
-    "covar_matrix = norm_sigma_full[0:n_assets,0:n_assets]\n",
-    "problem = [old_pos,risk_return,covar_matrix,asset_return, tc]"
+    "covar_matrix = norm_sigma_full[0:n_assets, 0:n_assets]\n",
+    "problem = [old_pos, risk_return, covar_matrix, asset_return, tc]"
    ]
   },
   {
@@ -281,8 +324,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qrisp.qaoa.mixers import portfolio_mixer \n",
-    "from qrisp.qaoa.problems.portfolio_rebalancing import * \n",
+    "from qrisp.qaoa.mixers import portfolio_mixer\n",
+    "from qrisp.qaoa.problems.portfolio_rebalancing import *\n",
     "from qrisp.qaoa import QAOAProblem\n",
     "\n",
     "# assign operators\n",
@@ -317,13 +360,16 @@
    "source": [
     "# assign QuantumArray to operate on\n",
     "from qrisp import QuantumVariable, QuantumArray\n",
+    "\n",
     "qv = QuantumVariable(n_assets)\n",
     "q_array = QuantumArray(qtype=qv, shape=(2))\n",
     "\n",
     "# run the problem!\n",
-    "theproblem = QAOAProblem(cost_operator=cost_op, mixer=mixer_op, cl_cost_function=cl_cost)\n",
+    "theproblem = QAOAProblem(\n",
+    "    cost_operator=cost_op, mixer=mixer_op, cl_cost_function=cl_cost\n",
+    ")\n",
     "theproblem.set_init_function(init_fun)\n",
-    "theNiceQAOA = theproblem.run(q_array,depth = 3)"
+    "theNiceQAOA = theproblem.run(q_array, depth=3)"
    ]
   },
   {
@@ -358,18 +404,28 @@
     }
    ],
    "source": [
-    "#create a classical cost function to evaluate the results\n",
+    "# create a classical cost function to evaluate the results\n",
     "def a_cost_fct(key):\n",
     "    half = len(key[0])\n",
-    "    new_key = [int(key[0][i])-int(key[1][i]) for i in range(half)]\n",
-    "    rr1 = sum([risk_return*covar_matrix[i][j] *new_key[i]*new_key[j] for i in range(half) for j in range(half)])\n",
-    "    rr2 = sum([(1-risk_return)*asset_return[j] *new_key[j] for j in range(half)])\n",
-    "    c_tc= sum([tc  for i in range(half) if new_key[i] != old_pos[i]])\n",
-    "    energy = -(rr1+ rr2+ c_tc)\n",
+    "    new_key = [int(key[0][i]) - int(key[1][i]) for i in range(half)]\n",
+    "    rr1 = sum(\n",
+    "        [\n",
+    "            risk_return * covar_matrix[i][j] * new_key[i] * new_key[j]\n",
+    "            for i in range(half)\n",
+    "            for j in range(half)\n",
+    "        ]\n",
+    "    )\n",
+    "    rr2 = sum([(1 - risk_return) * asset_return[j] * new_key[j] for j in range(half)])\n",
+    "    c_tc = sum([tc for i in range(half) if new_key[i] != old_pos[i]])\n",
+    "    energy = -(rr1 + rr2 + c_tc)\n",
     "    return energy\n",
     "\n",
+    "\n",
     "maxfive = sorted(theNiceQAOA, key=theNiceQAOA.get, reverse=True)[:5]\n",
-    "for key, val in theNiceQAOA.items():  # for name, age in dictionary.iteritems():  (for Python 2.x)\n",
+    "for (\n",
+    "    key,\n",
+    "    val,\n",
+    ") in theNiceQAOA.items():  # for name, age in dictionary.iteritems():  (for Python 2.x)\n",
     "    if key in maxfive:\n",
     "\n",
     "        print((key, val))\n",
