--- a/documentation/source/general/tutorial/tutorial.ipynb
+++ b/documentation/source/general/tutorial/tutorial.ipynb
@@ -32,6 +32,7 @@
    "outputs": [],
    "source": [
     "from qrisp import QuantumVariable\n",
+    "\n",
     "qv = QuantumVariable(5)"
    ]
   },
@@ -65,6 +66,7 @@
    ],
    "source": [
     "from qrisp import h, z, cx\n",
+    "\n",
     "h(qv[0])\n",
     "z(qv)\n",
     "cx(qv[0], qv[3])"
@@ -162,6 +164,7 @@
    "outputs": [],
    "source": [
     "from qrisp import QuantumChar\n",
+    "\n",
     "qch = QuantumChar()"
    ]
   },
@@ -349,7 +352,7 @@
     "\n",
     "# Make sure to install qrisp with the IQM interface: pip install qrisp[iqm]\n",
     "# from qrisp.interface import IQMBackend\n",
-    "# iqm_garnet = IQMBackend(api_token = \"IQM_RESONANCE_API_TOKEN\", \n",
+    "# iqm_garnet = IQMBackend(api_token = \"IQM_RESONANCE_API_TOKEN\",\n",
     "#                           device_instance = \"garnet\")\n",
     "# results = qch.get_measurement(backend = iqm_garnet)\n",
     "# print(results)"
@@ -390,9 +393,10 @@
    "source": [
     "from qrisp import auto_uncompute, z, h, QuantumFloat\n",
     "\n",
+    "\n",
     "@auto_uncompute\n",
     "def sqrt_oracle(qf):\n",
-    "    temp_qbool = (qf*qf == 0.25)\n",
+    "    temp_qbool = qf * qf == 0.25\n",
     "    z(temp_qbool)"
    ]
   },
@@ -530,7 +534,7 @@
     "qf = QuantumFloat(3, -1, signed=True)\n",
     "\n",
     "n = qf.size\n",
-    "iterations = int((2**n/2)**0.5)\n",
+    "iterations = int((2**n / 2) ** 0.5)\n",
     "\n",
     "h(qf)\n",
     "\n",
@@ -570,10 +574,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qrisp import QuantumFloat, control, QFT, h    \n",
+    "from qrisp import QuantumFloat, control, QFT, h\n",
+    "\n",
     "\n",
     "def QPE(psi, U, precision):\n",
-    "    \n",
+    "\n",
     "    res = QuantumFloat(precision, -precision)\n",
     "\n",
     "    h(res)\n",
@@ -582,7 +587,7 @@
     "        with control(res[i]):\n",
     "            for j in range(2**i):\n",
     "                U(psi)\n",
-    "    \n",
+    "\n",
     "    return QFT(res, inv=True)"
    ]
   },
@@ -610,13 +615,15 @@
     "from qrisp import p, QuantumVariable, multi_measurement\n",
     "import numpy as np\n",
     "\n",
+    "\n",
     "def U(psi):\n",
     "    phi_1 = 0.5\n",
     "    phi_2 = 0.125\n",
     "\n",
-    "    p(phi_1*2*np.pi, psi[0])\n",
-    "    p(phi_2*2*np.pi, psi[1])\n",
-    "    \n",
+    "    p(phi_1 * 2 * np.pi, psi[0])\n",
+    "    p(phi_2 * 2 * np.pi, psi[1])\n",
+    "\n",
+    "\n",
     "psi = QuantumVariable(2)\n",
     "\n",
     "h(psi)\n",
