--- a/documentation/source/general/tutorial/QAOAtutorial/QUBO.ipynb
+++ b/documentation/source/general/tutorial/QAOAtutorial/QUBO.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "51a388fe",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3c69fd4c",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                                                                     \u001b[2K\r"
+      "                                                                                     \u001b[2K\u001b[2K\u001b[2K\r"
      ]
     },
     {
@@ -87,22 +87,22 @@
       "text/plain": [
        "[(np.int64(-34),\n",
        "  OutcomeArray(['1', '0', '0', '0', '1', '0'], dtype=object),\n",
-       "  0.0582),\n",
+       "  0.0496),\n",
        " (np.int64(-29),\n",
        "  OutcomeArray(['0', '0', '1', '0', '0', '0'], dtype=object),\n",
-       "  0.06),\n",
+       "  0.0584),\n",
        " (np.int64(-28),\n",
        "  OutcomeArray(['0', '0', '0', '0', '0', '1'], dtype=object),\n",
-       "  0.0616),\n",
+       "  0.0614),\n",
        " (np.int64(-28),\n",
        "  OutcomeArray(['0', '0', '1', '1', '0', '0'], dtype=object),\n",
-       "  0.0406),\n",
+       "  0.0412),\n",
        " (np.int64(-27),\n",
        "  OutcomeArray(['0', '0', '0', '1', '0', '1'], dtype=object),\n",
-       "  0.043)]"
+       "  0.044)]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "0bebb71d",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ceecabaf",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e5da1c1b",
    "metadata": {},
    "outputs": [
@@ -274,16 +274,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution 1: ['1' '0' '0' '0' '1' '0'] with cost: -34 and probability: 0.0372         \u001b[2K\n",
-      "Solution 2: ['0' '0' '1' '0' '0' '0'] with cost: -29 and probability: 0.0172\n",
-      "Solution 3: ['0' '0' '1' '1' '0' '0'] with cost: -28 and probability: 0.0222\n",
-      "Solution 4: ['0' '0' '0' '0' '0' '1'] with cost: -28 and probability: 0.0156\n",
-      "Solution 5: ['0' '0' '0' '1' '0' '1'] with cost: -27 and probability: 0.015\n",
-      "Solution 1: ['1' '0' '0' '0' '1' '0'] with cost: -34 and probability: 0.0372         \u001b[2K\n",
-      "Solution 2: ['0' '0' '1' '0' '0' '0'] with cost: -29 and probability: 0.0172\n",
-      "Solution 3: ['0' '0' '1' '1' '0' '0'] with cost: -28 and probability: 0.0222\n",
-      "Solution 4: ['0' '0' '0' '0' '0' '1'] with cost: -28 and probability: 0.0156\n",
-      "Solution 5: ['0' '0' '0' '1' '0' '1'] with cost: -27 and probability: 0.015\n"
+      "Solution 1: ['1' '0' '0' '0' '1' '0'] with cost: -34 and probability: 0.0386         \u001b[2K\n",
+      "Solution 2: ['0' '0' '0' '0' '0' '1'] with cost: -28 and probability: 0.0398\n",
+      "Solution 3: ['0' '0' '1' '1' '0' '0'] with cost: -28 and probability: 0.0254\n",
+      "Solution 4: ['0' '1' '1' '0' '0' '0'] with cost: -27 and probability: 0.0054\n",
+      "Solution 5: ['0' '0' '0' '1' '0' '1'] with cost: -27 and probability: 0.0024\n"
      ]
     }
    ],
@@ -331,7 +326,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "qrisp",
    "language": "python",
    "name": "python3"
   },
@@ -345,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
