Ensured proper display of formulas in H2 tutorial

--- a/documentation/source/general/tutorial/H2.ipynb
+++ b/documentation/source/general/tutorial/H2.ipynb
@@ -71,14 +71,14 @@
     "[commutator](https://en.wikipedia.org/wiki/Commutator) laws:\n",
     "\n",
     "$$\\begin{aligned}\n",
-    "[a_i, a^\\dagger_j] = a_i a^\\dagger_j - a_j a^\\dagger_i = \\delta_{ij}\\\\\n",
+    "\\;[a_i, a^\\dagger_j] = a_i a^\\dagger_j - a_j a^\\dagger_i = \\delta_{ij}\\\\\n",
     "[a^\\dagger_i, a^\\dagger_j] = [a_i, a_j] = 0\n",
     "\\end{aligned}$$\n",
     "\n",
     "For **Fermions** the ladder operators obey anti-commutator laws:\n",
     "\n",
     "$$\\begin{aligned}\n",
-    "\\{a_i, a^\\dagger_j\\} = a_i a^\\dagger_j + a_j^\\dagger a_i = \\delta_{ij}\\\\\n",
+    "\\;\\{a_i, a^\\dagger_j\\} = a_i a^\\dagger_j + a_j^\\dagger a_i = \\delta_{ij}\\\\\n",
     "\\{a^\\dagger_i, a^\\dagger_j\\} = \\{a_i, a_j\\} = 0\n",
     "\\end{aligned}$$\n",
     "\n",
